# ml_hands_on_project

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  install_requirements.py  mlflow.db  pyproject.toml  requirements.txt  temp.py  training_pipeline.designer.ipynb
app/: main.py
data/processed/: train_test_datasset.csv
hop/: __init__.py  dataset.py  features.py  plots.py
hop/modeling/: predict.py  train.py
latex_beamer/: beamer.tex
latex_beamer/sections/: 01_introduction.tex  02_data_discovery.tex  02_data_preparation.tex  03_data_preparation.tex  03_modeling.tex  04_deployment.tex  04_modeling.tex  05_conclusion.tex  05_performance.tex  06_deployment.tex  07_conclusion.tex  08_databrics.tex  09_final_slide.tex
latex_beamer/slides/: beamer.aux  beamer.fdb_latexmk  beamer.fls  beamer.nav  beamer.out  beamer.toc  beamer.vrb
mlruns/0/: meta.yaml
mlruns/740452609580822840/: meta.yaml
notebooks/: 2.0-havg-split-dataset.ipynb  3.0-havg-base-model.ipynb  3.0-havg-transform-and-model.ipynb  4.0-havg-importance-shap-linear-explainer.ipynb  4.0-havg-importance-shap-tree-explainer.ipynb  5.0-havg-feature-engineering.ipynb  6.0-havg-optuna-model copy.ipynb  6.0-havg-optuna-model.ipynb  7.0-havg-shap.ipynb  7.0-havg-validation-evaluation.ipynb  8.0-havg-validation-evaluation.ipynb  mlflow.db
references/: dictionary.md
src/: base_model.py  data_prep.py  eda_utils.py  feature_engineering.py  interpretation.py  mlflow_utils.py  optuna_optimization.py  selected_features.json
src/drift_monitoring/: feature_drift.py  (+2 more)
tests/: test_src.py
(+2497 files in other folders)
